--- a/03tut/package.json
+++ b/03tut/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "author": "Alex Kagai",
   "license": "ISC",
   "dependencies": {
     "date-fns": "^3.3.1",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.3"
   }
 }
